kubernetes/apps/home/media/frigate/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: frigate
spec:
  description: "Network policy for Frigate NVR"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: frigate
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
    # Allow ingress from envoy-gateway
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
    # Allow access to MQTT broker
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: db
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
    # Allow access to Kubernetes API
    - toEntities:
        - kube-apiserver
    # Allow access to camera streams (external/IoT network)
    - toEntities:
        - world
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    # Allow access to Vault
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
